v1.6.1 -
* made strategies no longer case-sensitive in the configuration
* added "nearestHomeOrSpawn" strategy

v1.6 - Jun 30, 2012
* added /permcheck command (alias /pc) for checking permissions
* added plugin metrics (from LWC author Hidendra, website http://mcstats.org). Edit "plugins/PluginMetrics/config.yml" and set "opt-out: true" if you wish to opt out of all mcstats reporting.
* Ticket #112: added permission for named spawns. By default this behavior is off, controlled by the "core.spawnNamedPermissions" config option. If enabled, HSP will check for permission: "hsp.command.spawn.named.<spawnname>" in order for the player to have permission to use the named teleport
* Enhancement request: "resetOnDeath" cooldown config option. Can be used per-permission, per-world or in default cooldown sections
* Ticket #114: random world spawn. Added 'spawnWorldRandom' strategy
* Ticket #114: random named spawn. Added 'spawnNamedRandom' strategy
* added "spawnRegionRandom" strategy for spawning at a completely random location inside a worldGuard region
* Ticket #104: /sethome and bedHome don't play nice together
* lots of testing and fixes to dynmap integration (it works now!)
* Ticket #106: fixed the annoying "your home bed was missing or obstructed" message
* Ticket #102: added French localizaton (thanks JohOply!)

v1.5.5 - May 12, 2012
* bugfix (unreported) for MODE_HOME_NO_BED not working
* Ticket #96: home name is "null" message in /homeinvite
* Ticket #98: delete homes with ID
* Ticket #71: bug with singleGlobalHome home limits
* Ticket #51: dynmap integration added (largely untested, looking for testers
& feedback)

v1.5.4.1 - May 5, 2012
* bugfix for an NPE on teleport, reported in comments
* made safe teleporting default to ON, can be disabled in config

v1.5.4 - May 4, 2012
* converted build system over to maven (finally stood up my own nexus
respository required to host dependent artifacts that aren't maven enabled).